# electbrian

./: README.md  elects.py  pyproject.toml  requirements.txt  test_pointelectrode.py
.github/workflows/: python-publish.yml
src/electbrian/: __init__.py
tests/: test_pointelectrode.py
