[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "electbrian"
version = "0.0"
authors = [
  { name="Dennis Toledo", email="" },
]
description = "Implements the point electrode approximation for electrodes"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["dependencies"]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.hatch.build.targets.wheel]
packages = ["src/electbrian"]