[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm[toml]",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "electbrian"
dynamic = ["version"]
authors = [
  { name="Dennis Toledo"},
]
description = "Implements the point electrode approximation for electrodes"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    'importlib_metadata; python_version < "3.8"',
    'Brian2',
    'scipy'
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools_scm]
write_to = "_version.py"

[tool.setuptools.packages.find]
where = ["src/electbrian"]

