[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "electbrian"
version = "0.3.1"
authors = [
  { name="Dennis Toledo"},
]
description = "Implements the point electrode approximation for electrodes"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "setuptools",
    "Brian2==2.9.0",
    "scipy==1.15.3"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.hatch.build.targets.wheel]
packages = ["src/electbrian"]
